[project]
name = "research-agent-hitl-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.1",
    "ddgs>=9.11.4",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.3",
    "ollama>=0.6.1",
    "wikipedia>=1.4.0",
]
