[project]
name = "research-agent-hitl-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.1",
    "ddgs>=9.11.4",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "ollama>=0.6.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
